# qubic_engine

./: .gitignore  Cargo.toml  README.md  simple.json  wR5_gR_ir1_48.leval
src/: ai.rs  board.rs  db.rs  exp.rs  lib.rs  main.rs  ml.rs  train.rs  utills.rs
src/ai/: .line.rs.swp  .line_nn.rs.swp  line.rs  line_nn.rs  mcts.rs  mpc.rs  pattern.rs  position.rs  timeout.rs  zhashmap.rs
src/ml/: funcs.rs  ops.rs  optim.rs  params.rs
test_graph/: 2  4  6
