[package]
name = "qubic_engine"
license = "MIT"
author = ["epaperamic@gmail.com"]
version = "0.1.1"
edition = "2021"
description = "qubic engine"
repository = "https://github.com/aokyut/qubic_engine"
keywords = ["engine", "game"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
indicatif = "0.17.8"
proconio = "0.5.0"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "= 1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlite = "0.36.1"

[features]
default = []
render = []
slow = []
view = []